WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
173376
WKIconLoadingDelegate never gets asked about the default favicon if touch/touch-precomposed icons are in the <head>
https://bugs.webkit.org/show_bug.cgi?id=173376
Summary
WKIconLoadingDelegate never gets asked about the default favicon if touch/tou...
Brady Eidson
Reported
2017-06-14 11:38:43 PDT
WKIconLoadingDelegate never gets asked about the default favicon if touch/touch-precomposed icons are in the <head>
Attachments
Patch
(12.08 KB, patch)
2017-06-14 11:41 PDT
,
Brady Eidson
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Brady Eidson
Comment 1
2017-06-14 11:39:03 PDT
<
rdar://problem/32614328
>
Brady Eidson
Comment 2
2017-06-14 11:41:58 PDT
Created
attachment 312909
[details]
Patch
WebKit Commit Bot
Comment 3
2017-06-14 12:17:25 PDT
Comment on
attachment 312909
[details]
Patch Clearing flags on attachment: 312909 Committed
r218278
: <
http://trac.webkit.org/changeset/218278
>
WebKit Commit Bot
Comment 4
2017-06-14 12:17:27 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug