WKIconLoadingDelegate never gets asked about the default favicon if touch/touch-precomposed icons are in the <head> <rdar://problem/32614328> and https://bugs.webkit.org/show_bug.cgi?id=173376

Reviewed by Alex Christensen.

Source/WebCore:

Covered by new API test

* loader/DocumentLoader.cpp:
(WebCore::DocumentLoader::startIconLoading): Previously we applied the default favicon if the set of LinkIcons was empty.
  Now, apply the default favicon if the set of LinkIcons contains no explicit favicon.

Tools:

* TestWebKitAPI/TestWebKitAPI.xcodeproj/project.pbxproj:
* TestWebKitAPI/Tests/WebKit2Cocoa/IconLoadingDelegate.mm: Added.
(-[IconLoadingDelegate webView:shouldLoadIconWithParameters:completionHandler:]):
(-[IconLoadingSchemeHandler initWithData:mimeType:]):
(-[IconLoadingSchemeHandler webView:startURLSchemeTask:]):
(-[IconLoadingSchemeHandler webView:stopURLSchemeTask:]):
(TEST):


Canonical link: https://commits.webkit.org/190254@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@218278 268f45cc-cd09-0410-ab3c-d52691b4dbfc